# homeoffice-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMMIT_TEMPLATE.md  Dockerfile  GEMINI.md  LICENSE.md  README.md  RELEASENOTES.md  REQUIREMENTS.md  USER_ROLES.md  alembic.ini  compiled-jumping-ember.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml  setup.sh
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  copilot-review.yml  release.yml
alembic/: env.py
alembic/versions/: 12b058676b09_add_expense_is_private_flag.py  1f81bbd6d0da_add_email_templates.py  22f34dad53ce_add_user_profile_fields.py  297d4b88fbfc_add_cover_image_position_y_to_events.py  2a3b4c5d6e7f_add_document_references.py  39501bd4d6c1_add_cover_image_fields_to_events.py  3a8f2c9d1e5b_add_company_contacts.py  52a4318c20ae_add_todo_templates_table.py  5407cda97a67_initial_tables.py  5c9d4e8f3a2b_add_plugin_tables.py  6bc1a7347a04_add_rbac_tables.py  7d8e9f0a1b2c_add_plugin_id_to_permissions.py  87f89f338243_drop_status_column_from_events.py  9546bc823832_add_currency_support.py  a1b2c3d4e5f6_add_expense_submission_tracking.py  a28421a30ffa_simplify_event_status_to_three_values.py  afa2b554c315_add_report_sent_at_to_events.py  b0d8b5f8e983_add_company_calendars_table.py  b16aa3f3bd1e_remove_enabled_field_from_plugin_.py  cb63b9a8c1b4_add_location_and_photo_features_v02.py  e7aa98881c78_fix_planning_to_upcoming_status.py
docker/: Dockerfile
docs/: COPILOT_REVIEW.md  time-tracking-refactor-plan.md
frontend/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
mockups/: todo-design-mockup.html  todo-templates-mockup.html
scripts/: backup.sh  dev_checks.py  docker-backup.sh  restore.sh
src/: __init__.py  config.py  database.py  encryption.py  main.py  security.py
tests/: conftest.py
(+302 files in other folders)
